--- a/style.html
+++ b/style.html
@@ -7,6 +7,229 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <h1 class="logo">
+            <a href="" aria-label="로고"></a>
+        </h1>
+        <button class="btn-menu" aria-label="메뉴"></button>
+    </header>
+    <main style="padding:0 16px;">
+        <h2 class="guide-title">form</h2>
+        <div class="search-type1">
+            <button class="btn-search" aria-label="돋보기 버튼"></button>
+            <input type="text" placeholder="Search items, collections, and accounts">
+            <button class="btn-microphone" aria-label="마이크 아이콘"></button>
+        </div>
+        <h2 class="guide-title">list-type</h2>
+        <div class="list-type1">
+            <a href="">
+                <div class="list-type1__thumb">
+                    <img src="images/img_rectangle1.png" alt="">
+                </div>
+                <div class="text-type3">Silent Wave</div>
+                <div class="profile">
+                    <div class="align">
+                        <div class="profile__img">
+                            <img src="images/img_profile1.png" alt="프로필 이미지">
+                            <div class="profile-active"></div>
+                        </div>
+                        <div class="profile__info">
+                            <div class="profile__name">Pawel Czerwinski</div>
+                            <div class="profile__role">Creator</div>
+                        </div>
+                    </div>
+                    <button class="btn-heart-gray" aria-label="좋아요 아이콘"></button>
+                </div>
+            </a>
+        </div>
+        <div class="list-type2">
+            <a href="">
+                <div class="list-type2__thumb">
+                    <img src="images/img_rectangle2.png" alt="">
+                </div>
+                <div class="list-type2__content">
+                    <div>
+                        <b class="list-type2__title">Inside Kings Cross</b>
+                        <b>2.3ETH</b>
+                    </div>
+                    <div class="list-type2__desc">
+                        Highest bid<b>1.00ETH</b>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <ul class="list-type3">
+            <li>
+                <a href="">
+                    <img src="images/img_rectangle1.png" alt="">
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="images/img_rectangle2.png" alt="">
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="images/img_rectangle3.png" alt="">
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="images/img_rectangle4.png" alt="">
+                </a>
+            </li>
+        </ul>
+        <div class="list-type4">
+            <li>
+                <a href="">
+                    <div class="list-type4__background"></div>
+                    <div class="list-type4__content text-center">
+                        <div class="list-type4__profile-img mx-auto">
+                            <img src="images/img_profile1.png" alt="프로필 이미지">
+                        </div>
+                        <div class="list-type4__user-name">Kennedy Yanko</div>
+                        <div class="list-type4__desc">
+                            Kennedy Yanko is an artist working in found metal and paint skin. Her methods reflect a dual abstract expressionist-surr
+                        </div>
+                        <div class="list-type4__follow-box mt20">
+                            <div>
+                                <div class="list-type4__follow-text">
+                                    <b class="list-type4__follow-count">2024</b>
+                                    <span>Followers</span>
+                                </div>
+                            </div>
+                            <butxton class="btn-follow">Follow</butxton>
+                        </div>
+                    </div>
+                </a>
+            </li>
+        </div>
+
+        <h2 class="guide-title">text</h2>
+        <div class="text-group1">
+            <span class="text-type4">Reserve Price</span>
+            <b class="text-type5">1.50 ETH</b>
+            <b class="text-type6">$2,683.73</b>
+        </div>
+        <p class="text-type1">Discover, collect, and sell</p>
+        <h2 class="h2-1">Your Digital Art</h2>
+        <h2 class="h2-2 icon-fire">Hot Collection</h2>
+
+        <h2 class="guide-title">btn</h2>
+        <button class="btn btn-large btn-bk-primary" style="width:100%;">Place a bid</button>
+        <button class="btn btn-large btn-outline-secondary" style="width:100%;">View artwork</button>
+        <button class="btn btn-small btn-outline-gray" style="width:118px;">View all</button>
+        <button class="btn btn-large btn-outline-gray icon-plus" style="width:100%;">Load more</button>
+        <button class="btn-prev" aria-label="이전 버튼"></button>
+        <button class="btn-next" aria-label="다음 버튼"></button>
+        <button class="btn-heart-black" aria-label="좋아요 버튼"></button>
+        <button class="btn-download" aria-label="다운로드 버튼"></button>
+
+        <h2 class="guide-title">tag</h2>
+        <span class="tag">#color</span>
+        <span class="tag">#circle</span>
+        <span class="tag">#black</span>
+        <span class="tag">#art</span>
+
+        <h2 class="guide-title">link</h2>
+        <div class="link-type1">
+            <div class="link-type1__info-content">
+                <div class="link-type1__logo"></div>
+                <div class="link-type1__title">View on Etherscan</div>
+            </div>
+            <a href="" class="btn-link" aria-label="링크 버튼"></a>
+        </div>
+        <div class="link-type2">
+            <div class="link-type2__info-content">
+                <div class="link-type2__profile-img"> 
+                    <img src="/images/img_profile1.png" alt="프로필 이미지">
+                </div>
+                <div class="link-type2__content">
+                    <b class="link-type2__title">Auction won by David</b>
+                    <p class="link-type2__time">June 06, 2021 at 12:00am</p>
+                    <div>
+                        <b class="link-type2__eth-price">1.50 ETH</b><span class="link-type2__dollar-price">$2,683.73</span>
+                    </div>
+                </div>
+            </div>
+            <a href="" class="btn-link" arai-label="링크 버튼"></a>
+        </div>
+
+        <h2 class="guide-title">tab</h2>
+        <div class="tab-type1">
+            <button class="--active">Feature Creatior</button>
+            <button>All Creator</button>
+        </div>
+
+        <h2 class="guide-title">profile</h2>
+        <div class="profile">
+            <div class="align">
+                <div class="profile__img">
+                    <img src="images/img_profile1.png" alt="프로필 이미지">
+                    <div class="profile-active"></div>
+                </div>
+                <div class="profile__info">
+                    <div class="profile__name">Pawel Czerwinski</div>
+                    <div class="profile__role">Creator</div>
+                </div>
+            </div>
+            <button class="btn-heart-gray" aria-label="좋아요"></button>
+        </div>
+    </main>
+    <div class="footer-visiual">
+        <div class="footer-visiual__top">
+            <a href="" class="logo mx-auto" aria-label="로고"></a>
+            <div>
+                <span class="footer-visiual__text1">The</span>
+                <span class="footer-visiual__text2">New</span>
+                <span class="footer-visiual__text3">Creative</span>
+                <b class="footer-visiual__text4">Economy</b>
+            </div>
+        </div>
+        <div class="footer-visiual__bot">
+            <button class="btn btn-large btn-bk-primary" style="width:100%;">Earn now</button>
+            <button class="btn btn-large btn-outline-gray" style="width:100%;">Discover more</button>
+        </div>
+    </div>
+    <footer class="footer">
+        <div class="footer-top">
+            <ul>
+                <li>
+                    <a href="">Instagram</a>
+                </li>
+                <li>
+                    <a href="">Twitter</a>
+                </li>
+                <li>
+                    <a href="">Discord</a>
+                </li>
+                <li>
+                    <a href="">Blog</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="">About</a>
+                </li>
+                <li>
+                    <a href="">Community Guidelines</a>
+                </li>
+                <li>
+                    <a href="">Terms of Service</a>
+                </li>
+                <li>
+                    <a href="">Privacy</a>
+                </li>
+                <li>
+                    <a href="">Careers</a>
+                </li>
+                <li>
+                    <a href="">Help</a>
+                </li>
+            </ul>
+        </div>
+        <div class="footer-bot">© 2021 Openart</div>
+    </footer>
 </body>
 </html>
