--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
           <tbody>
             <tr class="list">
               <td>스타일가이드</td>
-              <td><a href="/pages/style.html" target="_blank">style.html</a></td>
+              <td><a href="./style.html" target="_blank">style.html</a></td>
               <td>2024.08.10</td>
               <td>2024.00.00</td>
-              <td>x</td>
-              <td>x</td>
+              <td>O</td>
+              <td>O</td>
               <td>x</td>
               <td><span class="state m"></span></td>
               <td><span class="state ing"></span></td>
@@ -62,8 +62,8 @@
               </td>
             </tr>
             <tr class="list">
-              <td>MAIN</td>
-              <td><a href="main.html" target="_blank">main.html</a></td>
+              <td>home</td>
+              <td><a href="" target="_blank">home.html</a></td>
               <td>2024.00.00</td>
               <td>2024.00.00</td>
               <td>x</td>
@@ -76,11 +76,11 @@
               </td>
             </tr>
             <tr>
-              <td class="category" colspan="10">온라인교육</td>
+              <td class="category" colspan="10">Item detail</td>
             </tr>
             <tr class="list">
-              <td>온라인 과정 > 갤러리보기</td>
-              <td><a href="./pages/mao-01.html" target="_blank">mao-01.html</a></td>
+              <td>Item detail > Detail_Sold</td>
+              <td><a href="" target="_blank">detailSold.html</a></td>
               <td>2024.00.20</td>
               <td>2024.00.00</td>
               <td>x</td>
@@ -93,9 +93,156 @@
               </td>
             </tr>
             <tr class="list">
-              <td>온라인 과정 > 리스트보기</td>
-              <td><a href="./pages/mao-02.html" target="_blank">mao-02.html</a></td>
+              <td>Item detail > Detail_Auction</td>
+              <td><a href="" target="_blank">detailAuction.html</a></td>
               <td>2024.00.00</td>
+              <td>2024.00.00</td>
+              <td>x</td>
+              <td>x</td>
+              <td>x</td>
+              <td><span class="state m"></span></td>
+              <td><span class="state ing"></span></td>
+              <td>
+                <p class="t_em"></p>
+              </td>
+            </tr>
+            <tr class="list">
+              <td>Item detail > Detail_Current bid</td>
+              <td><a href="" target="_blank">detailCurrentBid.html</a></td>
+              <td>2024.00.00</td>
+              <td>2024.00.00</td>
+              <td>x</td>
+              <td>x</td>
+              <td>x</td>
+              <td><span class="state m"></span></td>
+              <td><span class="state ing"></span></td>
+              <td>
+                <p class="t_em"></p>
+              </td>
+            </tr>
+            <tr>
+              <td class="category" colspan="10">Discover Creator</td>
+            </tr>
+            <tr class="list">
+              <td>Discover Creator</td>
+              <td><a href="" target="_blank">discoverCreator.html</a></td>
+              <td>2024.00.20</td>
+              <td>2024.00.00</td>
+              <td>x</td>
+              <td>x</td>
+              <td>x</td>
+              <td><span class="state m"></span></td>
+              <td><span class="state ing"></span></td>
+              <td>
+                <p class="t_em"></p>
+              </td>
+            </tr>
+            <tr>
+              <td class="category" colspan="10">User Profile</td>
+            </tr>
+            <tr class="list">
+              <td>User Profile</td>
+              <td><a href="" target="_blank">userProfile.html</a></td>
+              <td>2024.00.20</td>
+              <td>2024.00.00</td>
+              <td>x</td>
+              <td>x</td>
+              <td>x</td>
+              <td><span class="state m"></span></td>
+              <td><span class="state ing"></span></td>
+              <td>
+                <p class="t_em"></p>
+              </td>
+            </tr>
+            <tr>
+              <td class="category" colspan="10">search</td>
+            </tr>
+            <tr class="list">
+              <td>search</td>
+              <td><a href="" target="_blank">search.html</a></td>
+              <td>2024.00.20</td>
+              <td>2024.00.00</td>
+              <td>x</td>
+              <td>x</td>
+              <td>x</td>
+              <td><span class="state m"></span></td>
+              <td><span class="state ing"></span></td>
+              <td>
+                <p class="t_em"></p>
+              </td>
+            </tr>
+            <tr>
+              <td class="category" colspan="10">profile</td>
+            </tr>
+            <tr class="list">
+              <td>profile > my profile_empty</td>
+              <td><a href="" target="_blank">profileEmpty.html</a></td>
+              <td>2024.00.20</td>
+              <td>2024.00.00</td>
+              <td>x</td>
+              <td>x</td>
+              <td>x</td>
+              <td><span class="state m"></span></td>
+              <td><span class="state ing"></span></td>
+              <td>
+                <p class="t_em"></p>
+              </td>
+            </tr>
+            <tr class="list">
+              <td>profile >my profile_edit</td>
+              <td><a href="" target="_blank">profileEdit.html</a></td>
+              <td>2024.00.20</td>
+              <td>2024.00.00</td>
+              <td>x</td>
+              <td>x</td>
+              <td>x</td>
+              <td><span class="state m"></span></td>
+              <td><span class="state ing"></span></td>
+              <td>
+                <p class="t_em"></p>
+              </td>
+            </tr>
+            <tr>
+              <td class="category" colspan="10">join Community</td>
+            </tr>
+            <tr class="list">
+              <td>join Community</td>
+              <td><a href="" target="_blank">joiCommunity.html</a></td>
+              <td>2024.00.20</td>
+              <td>2024.00.00</td>
+              <td>x</td>
+              <td>x</td>
+              <td>x</td>
+              <td><span class="state m"></span></td>
+              <td><span class="state ing"></span></td>
+              <td>
+                <p class="t_em"></p>
+              </td>
+            </tr>
+            <tr>
+              <td class="category" colspan="10">About</td>
+            </tr>
+            <tr class="list">
+              <td>About</td>
+              <td><a href="" target="_blank">about.html</a></td>
+              <td>2024.00.20</td>
+              <td>2024.00.00</td>
+              <td>x</td>
+              <td>x</td>
+              <td>x</td>
+              <td><span class="state m"></span></td>
+              <td><span class="state ing"></span></td>
+              <td>
+                <p class="t_em"></p>
+              </td>
+            </tr>
+            <tr>
+              <td class="category" colspan="10">FAQ</td>
+            </tr>
+            <tr class="list">
+              <td>FAQ</td>
+              <td><a href="" target="_blank">faq.html</a></td>
+              <td>2024.00.20</td>
               <td>2024.00.00</td>
               <td>x</td>
               <td>x</td>
