--- a/style.html
+++ b/style.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <h1 class="logo">
-            <a href="" aria-label="로고"></a>
+            <a href="" aria-label="open Art"></a>
         </h1>
         <button class="btn-menu" aria-label="메뉴"></button>
     </header>
@@ -26,21 +26,21 @@
                 <div class="list-type1__thumb">
                     <img src="images/img_rectangle1.png" alt="">
                 </div>
-                <div class="text-type3">Silent Wave</div>
-                <div class="profile">
-                    <div class="align">
-                        <div class="profile__img">
-                            <img src="images/img_profile1.png" alt="프로필 이미지">
-                            <div class="profile-active"></div>
-                        </div>
-                        <div class="profile__info">
-                            <div class="profile__name">Pawel Czerwinski</div>
-                            <div class="profile__role">Creator</div>
-                        </div>
-                    </div>
-                    <button class="btn-heart-gray" aria-label="좋아요 아이콘"></button>
-                </div>
             </a>
+            <div class="text-type3">Silent Wave</div>
+            <div class="profile">
+                <div class="align">
+                    <div class="profile__img">
+                        <img src="images/img_profile1.png" alt="프로필 이미지">
+                        <div class="profile-active"></div>
+                    </div>
+                    <div class="profile__info">
+                        <div class="profile__name">Pawel Czerwinski</div>
+                        <div class="profile__role">Creator</div>
+                    </div>
+                </div>
+                <button class="btn-heart-gray"></button>
+            </div>
         </div>
         <div class="list-type2">
             <a href="">
@@ -80,31 +80,29 @@
                 </a>
             </li>
         </ul>
-        <div class="list-type4">
+        <ul class="list-type4">
             <li>
-                <a href="">
-                    <div class="list-type4__background"></div>
-                    <div class="list-type4__content text-center">
-                        <div class="list-type4__profile-img mx-auto">
-                            <img src="images/img_profile1.png" alt="프로필 이미지">
-                        </div>
-                        <div class="list-type4__user-name">Kennedy Yanko</div>
-                        <div class="list-type4__desc">
-                            Kennedy Yanko is an artist working in found metal and paint skin. Her methods reflect a dual abstract expressionist-surr
-                        </div>
-                        <div class="list-type4__follow-box mt20">
-                            <div>
-                                <div class="list-type4__follow-text">
-                                    <b class="list-type4__follow-count">2024</b>
-                                    <span>Followers</span>
-                                </div>
-                            </div>
-                            <butxton class="btn-follow">Follow</butxton>
-                        </div>
+                <div class="list-type4__background"></div>
+                <div class="list-type4__content text-center">
+                    <div class="list-type4__profile-img mx-auto">
+                        <img src="images/img_profile1.png" alt="프로필 이미지">
                     </div>
-                </a>
+                    <div class="list-type4__user-name">Kennedy Yanko</div>
+                    <div class="list-type4__desc">
+                        Kennedy Yanko is an artist working in found metal and paint skin. Her methods reflect a dual abstract expressionist-surr
+                    </div>
+                    <div class="list-type4__follow-box mt20">
+                        <div>
+                            <div class="list-type4__follow-text">
+                                <b class="list-type4__follow-count">2024</b>
+                                <span>Followers</span>
+                            </div>
+                        </div>
+                        <button class="btn-follow">Follow</button>
+                    </div>
+                </div>
             </li>
-        </div>
+        </ul>
 
         <h2 class="guide-title">text</h2>
         <div class="text-group1">
@@ -153,7 +151,9 @@
                     </div>
                 </div>
             </div>
-            <a href="" class="btn-link" arai-label="링크 버튼"></a>
+            <a href="" class="btn-link">
+                <div class="ally-hidden">링크 버튼</div>
+            </a>
         </div>
 
         <h2 class="guide-title">tab</h2>
@@ -179,7 +179,7 @@
     </main>
     <div class="footer-visiual">
         <div class="footer-visiual__top">
-            <a href="" class="logo mx-auto" aria-label="로고"></a>
+            <a href="" class="logo mx-auto" aria-label="open art"></a>
             <div>
                 <span class="footer-visiual__text1">The</span>
                 <span class="footer-visiual__text2">New</span>
