--- a/style.html
+++ b/style.html
@@ -28,15 +28,15 @@
                 </div>
             </a>
             <div class="text-type3">Silent Wave</div>
-            <div class="profile">
+            <div class="profile-type1">
                 <div class="align">
-                    <div class="profile__img">
+                    <div class="profile-img">
                         <img src="images/img_profile1.png" alt="프로필 이미지">
                         <div class="profile-active"></div>
                     </div>
-                    <div class="profile__info">
-                        <div class="profile__name">Pawel Czerwinski</div>
-                        <div class="profile__role">Creator</div>
+                    <div class="profile-type1__info">
+                        <div class="profile-type1__name">Pawel Czerwinski</div>
+                        <div class="profile-type1__role">Creator</div>
                     </div>
                 </div>
                 <button class="btn-heart-gray"></button>
@@ -46,11 +46,19 @@
             <a href="">
                 <div class="list-type2__thumb">
                     <img src="images/img_rectangle2.png" alt="">
+                    <div class="follow-group">
+                        <div class="follow-person follow-person_1">
+                            <img src="images/img_profile1.png" alt="">
+                        </div>
+                        <div class="follow-person follow-person_2">
+                            <img src="images/img_profile1.png" alt="">
+                        </div>
+                    </div>
                 </div>
                 <div class="list-type2__content">
                     <div>
                         <b class="list-type2__title">Inside Kings Cross</b>
-                        <b>2.3ETH</b>
+                        <b class="list-type2__eth ml6">2.3ETH</b>
                     </div>
                     <div class="list-type2__desc">
                         Highest bid<b>1.00ETH</b>
@@ -105,14 +113,15 @@
         </ul>
 
         <h2 class="guide-title">text</h2>
+        <h2 class="h2-1">h2-1</h2>
+        <h2 class="h2-2 icon-fire">h2-2 with icon-fire</h2>
+        <h2 class="h2-3">h2-3</h2>
+        <p class="text-type1">text-type1</p>
         <div class="text-group1">
-            <span class="text-type4">Reserve Price</span>
-            <b class="text-type5">1.50 ETH</b>
-            <b class="text-type6">$2,683.73</b>
+            <span class="text-type4">text-type4</span>
+            <b class="text-type5">text-type5</b>
+            <b class="text-type6">text-type6</b>
         </div>
-        <p class="text-type1">Discover, collect, and sell</p>
-        <h2 class="h2-1">Your Digital Art</h2>
-        <h2 class="h2-2 icon-fire">Hot Collection</h2>
 
         <h2 class="guide-title">btn</h2>
         <button class="btn btn-large btn-bk-primary" style="width:100%;">Place a bid</button>
@@ -139,15 +148,15 @@
             <a href="" class="btn-link" aria-label="링크 버튼"></a>
         </div>
         <div class="link-type2">
-            <div class="link-type2__info-content">
-                <div class="link-type2__profile-img"> 
-                    <img src="/images/img_profile1.png" alt="프로필 이미지">
+            <div class="profile-type2__info-content">
+                <div class="profile-img"> 
+                    <img src="./images/img_profile1.png" alt="프로필 이미지">
                 </div>
-                <div class="link-type2__content">
-                    <b class="link-type2__title">Auction won by David</b>
-                    <p class="link-type2__time">June 06, 2021 at 12:00am</p>
+                <div class="profile-type2__content">
+                    <b class="profile-type2__title">Auction won by David</b>
+                    <p class="profile-type2__time">June 06, 2021 at 12:00am</p>
                     <div>
-                        <b class="link-type2__eth-price">1.50 ETH</b><span class="link-type2__dollar-price">$2,683.73</span>
+                        <b class="profile-type2__eth-price">1.50 ETH</b><span class="profile-type2__dollar-price">$2,683.73</span>
                     </div>
                 </div>
             </div>
@@ -163,18 +172,37 @@
         </div>
 
         <h2 class="guide-title">profile</h2>
-        <div class="profile">
+        <div class="profile-type1">
             <div class="align">
-                <div class="profile__img">
+                <div class="profile-img">
                     <img src="images/img_profile1.png" alt="프로필 이미지">
                     <div class="profile-active"></div>
                 </div>
-                <div class="profile__info">
-                    <div class="profile__name">Pawel Czerwinski</div>
-                    <div class="profile__role">Creator</div>
+                <div class="profile-type1__info">
+                    <div class="profile-type1__name">Pawel Czerwinski</div>
+                    <div class="profile-type1__role">Creator</div>
                 </div>
             </div>
             <button class="btn-heart-gray" aria-label="좋아요"></button>
+        </div>
+        <div class="profile-type2">
+            <div class="profile-img"> 
+                    <img src="./images/img_profile1.png" alt="프로필 이미지">
+            </div>
+            <div class="profile-type2__content">
+                <b class="profile-type2__title">Auction won by David</b>
+                <p class="profile-type2__time">June 06, 2021 at 12:00am</p>
+                <div>
+                    <b class="profile-type2__eth-price">1.50 ETH</b><span class="profile-type2__dollar-price">$2,683.73</span>
+                </div>
+            </div>
+        </div>
+        <div class="profile-type3">
+            <div class="profile-img">
+                <img src="/images/img_profile1.png" alt="프로필이미지">
+                <div class="profile-active"></div>
+            </div>
+            <div class="profile-type3__user-name">By Rodion Kutsaev</div>
         </div>
     </main>
     <div class="footer-visiual">
