--- a/style.html
+++ b/style.html
@@ -199,7 +199,7 @@
         </div>
         <div class="profile-type3">
             <div class="profile-img">
-                <img src="/images/img_profile1.png" alt="프로필이미지">
+                <img src="./images/img_profile1.png" alt="프로필이미지">
                 <div class="profile-active"></div>
             </div>
             <div class="profile-type3__user-name">By Rodion Kutsaev</div>
